# python-forts

./: .gitignore  README.md
DataLab/: README.md  pyproject.toml  requirements.txt
DataLab/data/: people.csv
DataLab/reports/: report_20251207_150249.txt  report_20251207_222705.txt  report_20251207_225157.txt  report_20251207_230649.txt  report_20251207_232342.txt  report_20251208_095613.txt  report_20251208_112348.txt  report_20251208_112353.txt  report_20251208_113234.txt
DataLab/src/datalab/: __init__.py  __main__.py  config.py  main.py  module_io.py  processing.py  statistics.py  utils.py
DataLab/src/datalab/io/: file_ops.py
repetition/data/: generated.json  output.txt
uppgifter/: mini-project.txt
