[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datalab"
version = "0.1.0"
description = "Data analysis"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
]

[project.scripts]
# This creates a 'datalab' command that can be run from anywhere after installation
# It maps to the run() function in datalab.main module
datalab = "datalab.main:run"